@@ -25,6 +25,7 @@ import org.slf4j.LoggerFactory;
 
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
+import java.lang.reflect.Field;
 import java.math.BigInteger;
 import java.nio.charset.StandardCharsets;
 import java.security.SecureRandom;
@@ -837,8 +838,21 @@ public class ECKey {
     }
 
     public void clear() {
-        for(int i = 0; i < priv.bitLength(); i++) {
-            priv.clearBit(i);
+        if(priv == null) {
+            return;
+        }
+        try {
+            Field magField = BigInteger.class.getDeclaredField("mag");
+            magField.setAccessible(true);
+            int[] mag = (int[]) magField.get(priv);
+            if(mag != null) {
+                Arrays.fill(mag, 0);
+            }
+            Field sigField = BigInteger.class.getDeclaredField("signum");
+            sigField.setAccessible(true);
+            sigField.setInt(priv, 0);
+        } catch(NoSuchFieldException | IllegalAccessException e) {
+            log.warn("Could not zero private key via reflection; add --add-opens java.base/java.math=ALL-UNNAMED to JVM args");
         }
     }
 
